--- a/index.html
+++ b/index.html
@@ -14,13 +14,47 @@ svg {
   border-width: 3px;
 }
 
+path.link {
+  fill: none;
+  stroke: #000;
+  stroke-width: 4px;
+  cursor: default;
+}
+
+svg:not(.active):not(.ctrl) path.link {
+  cursor: pointer;
+}
+
+path.link.selected {
+  stroke-dasharray: 10,2;
+}
+
+path.link.dragline {
+  pointer-events: none;
+}
+
+path.link.hidden {
+  stroke-width: 0;
+}
+
+
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src="underscore.js"></script>
 <script>
 
-var width = 960,
-    height = 500,
+
+// mouse event vars
+var selected_node = null,
+    selected_link = null,
+    mousedown_link = null,
+    mousedown_node = null,
+    mouseup_node = null;
+
+
+var width = 1000,
+    height = 1000,
     radius = 6;
 
 var fill = d3.scale.category20();
@@ -35,18 +69,128 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
+    var svg2 = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height", height);
+    foci = [{x: 150, y: 150}, {x: 350, y: 250}, {x: 700, y: 400}, {x: 800, y: 800}, {x: 800, y: 800}];
+    // handles to link and node element groups
+var path = svg.append('svg:g').selectAll('path');
+// line displayed when dragging new nodes
+var drag_line = svg.append('svg:path')
+  .attr('class', 'link dragline hidden')
+  .attr('d', 'M0,0L0,0');
+
 svg.append("svg:rect")
     .attr("width", 300)
     .attr("height", 300)
     .attr("fill", "white")
     .attr("stroke", "black");
 
+    svg2.append("svg:rect")
+    .attr("width", 300)
+    .attr("height", 300)
+    .attr("fill", "white")
+    .attr("stroke", "black");
+
+
+// define arrow markers for graph links
+svg.append('svg:defs').append('svg:marker')
+    .attr('id', 'end-arrow')
+    .attr('viewBox', '0 -5 10 10')
+    .attr('refX', 6)
+    .attr('markerWidth', 3)
+    .attr('markerHeight', 3)
+    .attr('orient', 'auto')
+  .append('svg:path')
+    .attr('d', 'M0,-5L10,0L0,5')
+    .attr('fill', '#000');
+
+svg.append('svg:defs').append('svg:marker')
+    .attr('id', 'start-arrow')
+    .attr('viewBox', '0 -5 10 10')
+    .attr('refX', 4)
+    .attr('markerWidth', 3)
+    .attr('markerHeight', 3)
+    .attr('orient', 'auto')
+  .append('svg:path')
+    .attr('d', 'M10,-5L0,0L10,5')
+    .attr('fill', '#000');
+
+
+// line displayed when dragging new nodes
+var drag_line = svg.append('svg:path')
+  .attr('class', 'link dragline hidden')
+  .attr('d', 'M0,0L0,0');
+
+function mouseup() {
+  if(mousedown_node) {
+    // hide drag line
+    drag_line
+      .classed('hidden', true)
+      .style('marker-end', '');
+  }
+
+  // because :active only works in WebKit?
+  svg.classed('active', false);
+
+  // clear mouse event vars
+ // resetMouseVars();
+}
+
 d3.json("graph.json", function(error, graph) {
   if (error) return console.error(error);
+function restart(){
+
+   // update existing links
+  path.classed('selected', function(d) { return d === selected_link; })
+    .style('marker-start', function(d) { return d.left ? 'url(#start-arrow)' : ''; })
+    .style('marker-end', function(d) { return d.right ? 'url(#end-arrow)' : ''; });
+
+
+function mousedown() {
+  // prevent I-bar on drag
+  //d3.event.preventDefault();
+  
+  // because :active only works in WebKit?
+  svg.classed('active', true);
+
+  if(d3.event.altKey || mousedown_node || mousedown_link) return;
+
+  // insert new node at point
+  var point = d3.mouse(this),
+      node = {id: 100, reflexive: false};
+  node.x = point[0];
+  node.y = point[1];
+  node.group = 5;
+  graph.nodes.push(node);
+
+  restart();
+}
+
+  var groups = _.groupBy(graph.nodes, function(node){ return node.group; });
 
   var link = svg.selectAll("line")
       .data(graph.links)
-    .enter().append("line");
+    .enter().append("line"); /*
+
+    var labels2 = svg.selectAll("circle")
+      .data(groups[2])
+    .enter().append("text")
+  .text(function(d) { return d.name; });
+
+  var node2 = svg.selectAll("circle")
+      .data(groups[2])
+    .enter().append("circle")
+      .attr("r", radius - .75)
+      .style("fill", function(d) { return fill(d.group); })
+      .style("stroke", function(d) { return d3.rgb(fill(d.group)).darker(); })
+      .call(force.drag);
+      */
+
+    var labels = svg.selectAll("circle")
+      .data(graph.nodes)
+    .enter().append("text")
+  .text(function(d) { return d.name; });
 
   var node = svg.selectAll("circle")
       .data(graph.nodes)
@@ -54,7 +198,71 @@ d3.json("graph.json", function(error, graph) {
       .attr("r", radius - .75)
       .style("fill", function(d) { return fill(d.group); })
       .style("stroke", function(d) { return d3.rgb(fill(d.group)).darker(); })
-      .call(force.drag);
+      .call(force.drag)
+      .on('mousedown', function(d) {
+      if(!d3.event.altKey) return;
+
+      // select node
+      mousedown_node = d;
+      if(mousedown_node === selected_node) selected_node = null;
+      else selected_node = mousedown_node;
+      selected_link = null;
+
+      // reposition drag line
+      drag_line
+        .style('marker-end', 'url(#end-arrow)')
+        .classed('hidden', false)
+        .attr('d', 'M' + mousedown_node.x + ',' + mousedown_node.y + 'L' + mousedown_node.x + ',' + mousedown_node.y);
+
+
+      restart();
+    })
+    .on('mouseup', function(d) {
+      if(!mousedown_node) return;
+
+      // needed by FF
+      drag_line
+        .classed('hidden', true)
+        .style('marker-end', '');
+
+      // check for drag-to-self
+      mouseup_node = d;
+      if(mouseup_node === mousedown_node) { resetMouseVars(); return; }
+
+      // unenlarge target node
+      d3.select(this).attr('transform', '');
+
+      // add link to graph (update if exists)
+      // NB: links are strictly source < target; arrows separately specified by booleans
+      var source, target, direction;
+      //if(mousedown_node.id < mouseup_node.id) {
+        source = mousedown_node;
+        target = mouseup_node;
+        direction = 'right';
+      //} else {
+        //source = mouseup_node;
+        //target = mousedown_node;
+        //direction = 'left';
+      //}
+
+      var link;
+      link = graph.links.filter(function(l) {
+        return (l.source === source && l.target === target);
+      })[0];
+
+      if(link) {
+        link[direction] = true;
+      } else {
+        link = {source: source, target: target, left: false, right: false};
+        link[direction] = true;
+        graph.links.push(link);
+      }
+
+      // select new link
+      selected_link = link;
+      selected_node = null;
+      restart();
+    });
 
   force
       .nodes(graph.nodes)
@@ -62,15 +270,101 @@ d3.json("graph.json", function(error, graph) {
       .on("tick", tick)
       .start();
 
-  function tick() {
-    node.attr("cx", function(d) { return d.x = Math.max(radius, Math.min(300 - radius, d.x)); })
-        .attr("cy", function(d) { return d.y = Math.max(radius, Math.min(300 - radius, d.y)); });
+          function mousemove() {
+  if(!mousedown_node) return;
 
+  // update drag line
+  drag_line.attr('d', 'M' + mousedown_node.x + ',' + mousedown_node.y + 'L' + d3.mouse(this)[0] + ',' + d3.mouse(this)[1]);
+
+//drag_line.attr('d', 'M' + 100 + ',' + 100 + 'L' + d3.mouse(this)[0] + ',' + d3.mouse(this)[1]);
+
+restart();
+}
+
+      // app starts here
+svg.on('mousedown', mousedown)
+  .on('mousemove', mousemove)
+  .on('mouseup', mouseup);
+//d3.select(window)
+  //.on('keydown', keydown)
+  //.on('keyup', keyup);
+//restart();
+
+function resetMouseVars() {
+  mousedown_node = null;
+  mouseup_node = null;
+  mousedown_link = null;
+}
+
+
+   path = path.data(graph.links);
+
+  // update existing links
+  path.classed('selected', function(d) { return d === selected_link; })
+    .style('marker-start', function(d) { return d.left ? 'url(#start-arrow)' : ''; })
+    .style('marker-end', function(d) { return d.right ? 'url(#end-arrow)' : ''; });
+
+
+  // add new links
+  path.enter().append('svg:path')
+    .attr('class', 'link')
+    .classed('selected', function(d) { return d === selected_link; })
+    .style('marker-start', function(d) { return d.left ? 'url(#start-arrow)' : ''; })
+    .style('marker-end', function(d) { return d.right ? 'url(#end-arrow)' : ''; })
+    .on('mousedown', function(d) {
+      if(!d3.event.altKey) return;
+
+      // select link
+      mousedown_link = d;
+      if(mousedown_link === selected_link) selected_link = null;
+      else selected_link = mousedown_link;
+      selected_node = null;
+      restart();
+    });
+
+  // remove old links
+  path.exit().remove();
+
+
+  force
+      .nodes(graph.nodes)
+      .links(graph.links)
+      .on("tick", tick)
+      .start();
+
+
+
+  function tick(e) {
+
+  var k = .1 * e.alpha;
+  graph.nodes.forEach(function(o, i) {
+    //o.y += i & 1
+    o.y += ( 100 - o.y) * k ; // % 2) ? k : -k;
+    o.x += (o.group * 100 - o.x) * k;// % 2) ? k : -k;
+  });
+
+  node.attr("cx", function(d) { return d.x; })
+      .attr("cy", function(d) { return d.y; });
+
+/*
+    node.attr("cx", function(d) { 
+      if (d.group == 1)return d.x = Math.max(radius, Math.min(300 - radius, d.x)); 
+      else return d.x = Math.max(radius, Math.min(600 - radius, d.x));})
+        .attr("cy", function(d) { return d.y = Math.max(radius, Math.min(300 - radius, d.y)); });
+*/
     link.attr("x1", function(d) { return d.source.x; })
         .attr("y1", function(d) { return d.source.y; })
         .attr("x2", function(d) { return d.target.x; })
         .attr("y2", function(d) { return d.target.y; });
+
+        labels.attr("transform", function(d) { 
+   return 'translate(' + [d.x, d.y] + ')'; 
+  }); 
   }
+  }
+restart();
 });
+
+
 
 </script>
